# wasmtime-playground

./: Cargo.toml
examples/: hello.wat  sum.wat
src/: main.rs
