[package]
name = "wasmtime-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime" }
# wasmtime = { version = "^4.0.0" }
